se le agrego otro Fondo

--- a/tarea.css
+++ b/tarea.css
@@ -11,7 +11,7 @@
     border: 1px solid black;
     }
     .fondo{
-    background-image:url(https://cdn.magicdecor.in/com/2023/11/18145253/Abstract-Watercolor-Teal-Blue-Color-Grunge-Texture-Wallpaper-for-Wall-M.jpg);
+    background-image:url(https://static.vecteezy.com/system/resources/thumbnails/009/831/146/small/banner-web-template-abstract-blue-and-golden-wave-curved-lines-overlapping-layer-design-on-dark-blue-background-luxury-style-vector.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;  
     background-size: cover;
