--- a/Styles/main.css
+++ b/Styles/main.css
@@ -17,11 +17,50 @@ border: 3px solid;
     padding: 15px;
     gap: 10px;
     background-color: white;
-    border: 1px solid black;
+    border: 1px solid blueviolet;
     }
-    .fondo{
+.contenedor-doble {
+    display: flex;
+    justify-content: center;
+}
+ .fondo{
     background-image:url(https://img.freepik.com/vector-gratis/resumen-diseno-moderno-degradado-fondo-color-rojo_343694-2153.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;  
     background-size: cover;
-    }
+}
+.input-tarea {
+  width: 50%;
+  padding: 10px;
+  margin: 10px 15px;
+  border: 1px solid #ccc;
+}
+.boton-tarea {
+  margin: 10px;
+  background-color: #333;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+.boton-tarea:hover {
+  background-color: purple;
+}
+.lista-tareas {
+  list-style: none;
+  padding: 0;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.footer {
+  background-color: #333;
+  color: white;
+  text-align: center;
+  padding: 20px;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+}
+        
