--- a/Styles/main.css
+++ b/Styles/main.css
@@ -63,4 +63,9 @@ border: 3px solid;
   bottom: 0;
   width: 100%;
 }
-        
+.contacto{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
